@@ -25,6 +25,7 @@ package st.redline.compiler;
 import java.util.List;
 
 public interface NodeVisitor {
+	boolean continueMethodVisit();
 	void visit(Program program);
 	void visitEnd(Program program);
 	void visit(Temporaries temporaries);
